cmake_minimum_required(VERSION 3.21)
project(wet2)

set(CMAKE_CXX_STANDARD 14)

add_executable(wet2 main.cpp
        Union_Find.h)
#        LinkedList.cpp
#        LinkedList.h
#        Player.cpp
#        Player.h
#        Team.cpp
#        Team.h
#        AVLTree.cpp
#        AVLTree.h
#        worldcup23a2.h
#        worldcup23a2.cpp
#        wet2util.h
#        HashTable.cpp
#        HashTable.h RankAVL.cpp RankAVL.h Union_Find.cpp Union_Find.h UF_Node.h)
